<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/special_hire"
                    android:textAlignment="center"
                    android:textSize="25dp"
                    android:textColor="@color/red_dark"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/taxi_info"
                    android:layout_gravity="center"
                    android:padding="7dp"
                    android:textSize="16dp"
                    android:textStyle="italic"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/taxi"
                    android:scaleY="1.7"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/special_taxi"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/quick"
                    android:scaleX="1"
                    android:scaleY="1.3"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/quick_taxi"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/uber"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/uber_taxi"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/taxify"
                    android:scaleX="1"
                    android:scaleY="1.5"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/taxify_taxi"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/friendship"
                    android:scaleX="1"
                    android:scaleY="1.3"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/friendship"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>