<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/boda_boda"
                    android:textAlignment="center"
                    android:textSize="25dp"
                    android:textColor="@color/red_dark"
                    android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/boda_info"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textStyle="italic"
                        android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/safeboda"
                    android:scaleX="1"
                    android:scaleY="2"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/safe_info"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/taxifyboda"
                    android:scaleX="1"
                    android:scaleY="1.5"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/taxify_info"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/uberboda"
                    android:scaleX="1" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/uber_info"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>