<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hotels"
                    android:textAlignment="center"
                    android:textSize="25dp"
                    android:textColor="@color/YELLOW_DARK"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/hotel4"
                    android:scaleX="1"
                    android:scaleY="1.3"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/hotel4"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/hotel5"
                    android:scaleX="1"
                    android:scaleY="1.5"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/hotel5"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/hotel7"
                    android:scaleX="1"
                    android:scaleY="1.9"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/hotel7"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/hotel6"
                    android:scaleX="1"
                    android:scaleY="2"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/hotel6"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/hotel2"
                    android:scaleX="1"
                    android:scaleY="1.5"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/hotel2"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/hotel3"
                    android:scaleX="1"
                    android:scaleY="1.5"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/hotel3"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:padding="7dp">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/hotel1"
                    android:scaleX="1" />
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/hotel1"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>